[tool.poetry]
name = "surblclient"
version = "0.1.0"
description = "Client library for querying SURBL and other RBL blocklists"
authors = ["Filip Salomonsson <filip.salomonsson@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/filipsalomonsson/surblclient"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
